# SegundoProyecto

./: CMakeLists.txt  Direction.h  Enemy.cpp  Enemy.h  EntityFactory.cpp  EntityFactory.h  Event.cpp  Event.h  FileManager.cpp  FileManager.h  Item.cpp  Item.h  Player.cpp  Player.h  Room.cpp  Room.h  World.cpp  World.h  main.cpp
data/: enemies.txt  events.txt  items.txt  player.txt  rooms.txt
